fix chatlist item preview icon distortion (#4064)
* Fixing distorted summaryPreviewImage

* added changelog entry and pr number

* fixed formatting

--- a/scss/chat/_chat-list-item.scss
+++ b/scss/chat/_chat-list-item.scss
@@ -110,7 +110,7 @@
         color: var(--chat-list-item-summary-text);
         user-select: none;
 
-        & > img.summary_thumbnail {
+        & > .summary_thumbnail {
           height: 18px;
           width: 18px;
           min-width: 18px;
@@ -118,6 +118,8 @@
           border-radius: 3px;
           margin-inline-start: 3px;
           margin-inline-end: 4px;
+          background-size: cover;
+          background-position: center;
         }
 
         & > .summary {
